[gd_scene load_steps=10 format=3 uid="uid://ogdojg6qm65c"]

[ext_resource type="Script" path="res://main.gd" id="1_qbov0"]
[ext_resource type="Script" path="res://new_pack_dialog.gd" id="2_3vvqh"]
[ext_resource type="PackedScene" uid="uid://c0drd5npyrnoi" path="res://profile_button.tscn" id="2_t7p04"]
[ext_resource type="Script" path="res://settings.gd" id="4_8gqfh"]

[sub_resource type="Shader" id="Shader_lv28n"]
code = "shader_type canvas_item;

uniform vec4 color_gap: source_color = vec4(0.25);
uniform vec4 color_stripe: source_color = vec4(1.0, 0.75, 0.0, 1.0);
uniform float divisions = 16.0; // increase for more stripe density
uniform float stripe_bias = 2.0; // 1.0 means no stripes; 2.0 means stripes and gaps are equal size
uniform float speed = 0.03;
uniform float angle = 0.7854; // in radians


void fragment() {
    float w = cos(angle) * UV.x + sin(angle) * UV.y - speed * TIME;
    if (floor(mod(w * divisions, stripe_bias)) < 0.0001) {
        COLOR = color_gap;
    } else {
        COLOR = color_stripe;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jsgj4"]
resource_local_to_scene = true
shader = SubResource("Shader_lv28n")
shader_parameter/color_gap = Color(0.16, 0.11776, 0.0544, 1)
shader_parameter/color_stripe = Color(0.23, 0.185533, 0.138, 1)
shader_parameter/divisions = 2.945
shader_parameter/stripe_bias = 2.0
shader_parameter/speed = 0.03
shader_parameter/angle = 0.43

[sub_resource type="Shader" id="Shader_gxswx"]
code = "shader_type canvas_item;

uniform vec4 color_gap: source_color = vec4(0.25);
uniform vec4 color_stripe: source_color = vec4(1.0, 0.75, 0.0, 1.0);
uniform float divisions = 16.0; // increase for more stripe density
uniform float stripe_bias = 2.0; // 1.0 means no stripes; 2.0 means stripes and gaps are equal size
uniform float speed = 0.03;
uniform float angle = 0.7854; // in radians


void fragment() {
    float w = cos(angle) * UV.x + sin(angle) * UV.y - speed * TIME;
    if (floor(mod(w * divisions, stripe_bias)) < 0.0001) {
        COLOR = color_gap;
    } else {
        COLOR = color_stripe;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u36n0"]
resource_local_to_scene = true
shader = SubResource("Shader_gxswx")
shader_parameter/color_gap = Color(0.16, 0.11776, 0.0544, 1)
shader_parameter/color_stripe = Color(0.23, 0.185533, 0.138, 1)
shader_parameter/divisions = 2.81
shader_parameter/stripe_bias = 2.0
shader_parameter/speed = 0.06
shader_parameter/angle = 0.195

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b8iah"]
resource_local_to_scene = true
shader = SubResource("Shader_lv28n")
shader_parameter/color_gap = Color(0.16, 0.11776, 0.0544, 1)
shader_parameter/color_stripe = Color(0.23, 0.185533, 0.138, 1)
shader_parameter/divisions = 16.0
shader_parameter/stripe_bias = 2.0
shader_parameter/speed = 0.03
shader_parameter/angle = 0.7854

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbov0")
profile_scene = ExtResource("2_t7p04")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NewPack" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "New Pack"

[node name="LoadPack" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Load Current Pack"

[node name="ViewCurrent" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "View Current Mods"

[node name="CurrentViewLabel" type="Label" parent="MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Currently Viewing:"

[node name="CurrentView" type="RichTextLabel" parent="MarginContainer/HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[b]mods[/b]"
fit_content = true

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 10
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="ProfileContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Profiles" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ProfileContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ModContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Mods" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ModContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="NewPackDialog" type="Window" parent="."]
title = "New Pack"
initial_position = 1
size = Vector2i(340, 80)
visible = false
unresizable = true
force_native = true
script = ExtResource("2_3vvqh")

[node name="VBoxContainer" type="VBoxContainer" parent="NewPackDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Name" type="HBoxContainer" parent="NewPackDialog/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NewPackDialog/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 6
text = "Name"

[node name="Name" type="LineEdit" parent="NewPackDialog/VBoxContainer/Name"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
expand_to_text_length = true

[node name="Buttons" type="HBoxContainer" parent="NewPackDialog/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Confirm" type="Button" parent="NewPackDialog/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="Cancel" type="Button" parent="NewPackDialog/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Stripes" type="Panel" parent="NewPackDialog"]
z_index = -100
material = SubResource("ShaderMaterial_jsgj4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Darken" type="Panel" parent="NewPackDialog"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Settings" type="Window" parent="."]
title = "Settings"
initial_position = 1
size = Vector2i(320, 30)
unresizable = true
force_native = true
script = ExtResource("4_8gqfh")

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MinecraftDir" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/MinecraftDir"]
layout_mode = 2
size_flags_horizontal = 6
text = "Invalid"

[node name="FindDir" type="Button" parent="Settings/VBoxContainer/MinecraftDir"]
layout_mode = 2
size_flags_horizontal = 6
text = "Minecraft Directory"

[node name="FileDialog" type="FileDialog" parent="Settings/VBoxContainer/MinecraftDir"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="Stripes" type="Panel" parent="Settings"]
z_index = -100
material = SubResource("ShaderMaterial_u36n0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Darken" type="Panel" parent="Settings"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Stripes" type="Panel" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_b8iah")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Darken" type="Panel" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/NewPack" to="NewPackDialog" method="_on_new_pack_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/LoadPack" to="." method="_on_load_pack_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/ViewCurrent" to="." method="_on_view_current_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/Settings" to="Settings" method="_on_settings_pressed"]
[connection signal="close_requested" from="NewPackDialog" to="NewPackDialog" method="_on_close_requested"]
[connection signal="pressed" from="NewPackDialog/VBoxContainer/Buttons/Confirm" to="NewPackDialog" method="_on_confirm_pressed"]
[connection signal="pressed" from="NewPackDialog/VBoxContainer/Buttons/Cancel" to="NewPackDialog" method="_on_cancel_pressed"]
[connection signal="close_requested" from="Settings" to="Settings" method="_on_close_requested"]
[connection signal="pressed" from="Settings/VBoxContainer/MinecraftDir/FindDir" to="Settings" method="_on_find_dir_pressed"]
[connection signal="dir_selected" from="Settings/VBoxContainer/MinecraftDir/FileDialog" to="Settings" method="_on_file_dialog_dir_selected"]
